# Multi-Robot-Basket--24-25

./: .gv  README.md  frames_2025-01-07_18.39.10.gv  frames_2025-03-03_07.37.29.gv  frames_2025-03-03_09.08.45.gv
.devcontainer/: Dockerfile.deploy  devcontainer.json
DHANUSH_URDF_description/: package.xml  setup.cfg  setup.py
DHANUSH_URDF_description/launch/: display.launch.py  gazebo.launch.py
DHANUSH_URDF_description/meshes/: base_link.stl  dribbling_stroke_1.stl  ext_l1_1.stl  ext_l2_1.stl  ext_l3_1.stl  ext_r1_1.stl  ext_r2_1.stl  ext_r3_1.stl  gripper_l_1.stl  gripper_r_1.stl  receving_bucket_1.stl  shaft1_1.stl  shaft2_1.stl  shooting_structue_1.stl  wheel1_1.stl  wheel2_1.stl  wheel3_1.stl  wheel4_1.stl
DHANUSH_URDF_description/urdf/: DHANUSH_URDF.gazebo  DHANUSH_URDF.trans  DHANUSH_URDF.xacro  materials.xacro
install/: local_setup.sh  setup.sh
log/: latest_build
omni_chassis_basic_description/: package.xml  setup.cfg  setup.py
rbcon_sim/: CMakeLists.txt  package.xml
shooting_set_description/: package.xml  setup.cfg  setup.py
sim_controller/: package.xml  setup.cfg  setup.py
vyom_new_description/: package.xml  setup.cfg  setup.py
zeus_description/: package.xml
zeus_init/: CMakeLists.txt  package.xml
zeus_init/config/: cam_config.yaml  ekf.yaml  joint_states.yaml  joystick.yaml  localizationConfig.yaml  locate.rviz  mappingConfig.yaml  rplidar.yaml
zeus_init/launch/: init.launch.py  localization.launch.py  locate.launch.py  mapping.launch.py
zeus_init/scripts/: pub_pose_r1.py
zeus_nav/: CMakeLists.txt  package.xml
(+202 files in other folders)
